# adsd-in-practice

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-MIT  METHODOLOGY-STATUS.md  README.md  SECURITY.md
_shared/: 5-gate-cpp.sh  (+6 more)
cs01-mini-redis-rust/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
cs01-mini-redis-rust/crates/redis-protocol/: Cargo.toml
cs01-mini-redis-rust/crates/redis-protocol/src/: lib.rs
cs01-mini-redis-rust/crates/redis-protocol/tests/: proptest_round_trip.rs  round_trip.rs
cs01-mini-redis-rust/crates/redis-server/: Cargo.toml
cs01-mini-redis-rust/crates/redis-server/src/: dispatch.rs  encode.rs  http.rs  lib.rs  main.rs  server.rs  state.rs
cs01-mini-redis-rust/crates/redis-server/tests/: dispatch.rs  http_sse.rs  server_e2e.rs
cs01-mini-redis-rust/crates/redis-storage/: Cargo.toml
cs01-mini-redis-rust/crates/redis-storage/src/: aof.rs  glob.rs  lib.rs  metrics.rs
cs01-mini-redis-rust/crates/redis-storage/tests/: aof.rs  glob.rs  metrics.rs  pubsub.rs  store_basic.rs
cs01-mini-redis-rust/docs/agent/adr/: 0001-stack-choice.md  0002-resp-framing.md  0003-storage-layout.md  0004-command-routing.md  0005-tcp-listener.md  0006-m1-4-commands-and-hardening.md  0007-m2-1-axum-sse-control-plane.md  0008-m2-2-sveltekit-ui.md  0009-m3-1-pubsub.md  0010-m3-2-aof-persistence.md  0011-m4-1-critical-fixes.md  0012-m4-2-doc-sweep-release-artifacts.md  0013-tauri-desktop-frontend.md  README.md
cs01-mini-redis-rust/docs/agent/findings/: README.md  m1-1-p9-missed-shared-doc-coverage.md  m1-3-cto-wrote-code-instead-of-dispatching.md  m1-4-f23a-oracle-caught-ttl-rounding-spec-bug.md  m2-1-no-f23a-on-control-plane.md  m3-1-lagging-subscriber-disconnect.md  m3-2-aof-replay-corruption-handling.md  m4-3-tauri-sidecar-packaging-blocker.md  m4-4-cross-session-tauri-contamination.md  m4-pre-release-audit-team-aggregation.md
cs01-mini-redis-rust/docs/human/en/: README.md  adr-0001-stack-choice.md  adr-0002-resp-framing.md  adr-0003-storage-layout.md  adr-0004-command-routing.md  adr-0005-tcp-listener.md  adr-0006-m1-4-commands-and-hardening.md  adr-0007-m2-1-axum-sse-control-plane.md  adr-0008-m2-2-sveltekit-ui.md  adr-0009-m3-1-pubsub.md  adr-0010-m3-2-aof-persistence.md  adr-0011-m4-1-critical-fixes.md  adr-0012-m4-2-doc-sweep-release-artifacts.md  adr-0013-tauri-desktop-frontend.md  finding-m1-1-p9-missed-shared-doc-coverage.md  finding-m1-3-cto-wrote-code-instead-of-dispatching.md  finding-m1-4-f23a-oracle-caught-ttl-rounding-spec-bug.md  finding-m2-1-no-f23a-on-control-plane.md  finding-m3-1-lagging-subscriber-disconnect.md  finding-m3-2-aof-replay-corruption-handling.md  finding-m4-3-tauri-sidecar-packaging-blocker.md  finding-m4-4-cross-session-tauri-contamination.md  finding-m4-pre-release-audit-team-aggregation.md
cs01-mini-redis-rust/docs/human/zh/: README.md  adr-0001-stack-choice.md  adr-0002-resp-framing.md  adr-0003-storage-layout.md  adr-0004-command-routing.md  adr-0005-tcp-listener.md  adr-0006-m1-4-commands-and-hardening.md  adr-0007-m2-1-axum-sse-control-plane.md  adr-0008-m2-2-sveltekit-ui.md  adr-0009-m3-1-pubsub.md  adr-0010-m3-2-aof-persistence.md  adr-0011-m4-1-critical-fixes.md  adr-0012-m4-2-doc-sweep-release-artifacts.md  adr-0013-tauri-desktop-frontend.md  finding-m1-1-p9-missed-shared-doc-coverage.md  finding-m1-3-cto-wrote-code-instead-of-dispatching.md  finding-m1-4-f23a-oracle-caught-ttl-rounding-spec-bug.md  finding-m2-1-no-f23a-on-control-plane.md  finding-m3-1-lagging-subscriber-disconnect.md  finding-m3-2-aof-replay-corruption-handling.md  finding-m4-3-tauri-sidecar-packaging-blocker.md  finding-m4-4-cross-session-tauri-contamination.md  finding-m4-pre-release-audit-team-aggregation.md
cs01-mini-redis-rust/scripts/: bootstrap.sh  frontend-gate.sh  tauri-gate.sh
cs01-mini-redis-rust/tests/: oracle.sh  oracle_aof.py  oracle_pubsub.py
cs01-mini-redis-rust/web/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
cs01-mini-redis-rust/web/src/: app.css  app.html
cs01-mini-redis-rust/web/src-tauri/: Cargo.toml  tauri.conf.json
cs01-mini-redis-rust/web/src-tauri/src/: main.rs
cs01-mini-redis-rust/web/src/lib/: desktop.ts  format.test.ts  format.ts
cs01-mini-redis-rust/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
cs02-mini-git-rust/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
cs02-mini-git-rust/crates/mg-cli/: Cargo.toml
cs02-mini-git-rust/crates/mg-cli/src/: main.rs
cs02-mini-git-rust/crates/mg-core/: Cargo.toml
cs02-mini-git-rust/crates/mg-core/src/: hash.rs  index.rs  lib.rs  object.rs  repo.rs
cs02-mini-git-rust/docs/agent/adr/: 0001-stack-choice.md  0002-object-identity-loose-store.md  0003-index-tree-compatibility.md  0004-repository-state-commits-log.md  0005-release-filesystem-hardening.md  README.md
cs02-mini-git-rust/docs/agent/findings/: README.md  m4-pre-release-filesystem-hardening.md
cs02-mini-git-rust/docs/human/en/: README.md  adr-0001-stack-choice.md  (+5 more)
cs02-mini-git-rust/scripts/: bootstrap.sh
cs02-mini-git-rust/tests/: oracle.sh
cs03-taskboard-llm-python/: CLAUDE.md  README.md  pyproject.toml
cs03-taskboard-llm-python/scripts/: bootstrap.sh
cs03-taskboard-llm-python/src/taskboard/: __init__.py  llm_router.py  main.py
cs03-taskboard-llm-python/tests/: test_smoke.py
cs04-pyfmt-mini-python/: CLAUDE.md  README.md  pyproject.toml
cs04-pyfmt-mini-python/scripts/: bootstrap.sh
cs04-pyfmt-mini-python/src/pyfmt_mini/: __init__.py  __main__.py  rules.py
cs04-pyfmt-mini-python/tests/: test_smoke.py
cs05-phys2d-wasm-cpp/core/: CMakeLists.txt
cs05-phys2d-wasm-cpp/core/src/: aabb.cpp  body.cpp  vec2.cpp  wasm_glue.cpp  world.cpp
cs05-phys2d-wasm-cpp/core/tests/: test_aabb.cpp  test_vec2.cpp
cs06-lockfree-queue-cpp/: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  README.md
cs06-lockfree-queue-cpp/bench/: queue_bench.cpp
cs06-lockfree-queue-cpp/include/lfq/: mpmc.hpp  spsc.hpp
cs06-lockfree-queue-cpp/scripts/: bootstrap.sh
cs06-lockfree-queue-cpp/tests/: test_spsc.cpp
(+56 files in other folders)
