[workspace]
resolver = "2"
members = [
    "crates/redis-protocol",
    "crates/redis-storage",
    "crates/redis-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["ADSD in Practice contributors"]
repository = "https://github.com/Cobrust-lang/adsd-in-practice"
homepage = "https://github.com/Cobrust-lang/adsd-in-practice"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false }
bytes = "1"
hashbrown = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
