[workspace]
resolver = "2"
members = ["crates/mg-core", "crates/mg-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["ADSD in Practice contributors"]
repository = "https://github.com/Cobrust-lang/adsd-in-practice"
homepage = "https://github.com/Cobrust-lang/adsd-in-practice"
readme = "README.md"

[workspace.dependencies]
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
