[project]
name = "taskboard"
version = "0.1.0"
description = "ADSD CS-03: LLM-augmented task board (FastAPI + SvelteKit)"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
authors = [{ name = "ADSD in Practice contributors" }]
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.9",
    "httpx>=0.27",
    "anthropic>=0.42",
    "openai>=1.55",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[project.scripts]
taskboard = "taskboard.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/taskboard"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
