[project]
name = "pyfmt-mini"
version = "0.1.0"
description = "ADSD CS-04: minimal Python code formatter (subset of black)"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
authors = [{ name = "ADSD in Practice contributors" }]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "hypothesis>=6",
    "ruff>=0.7",
    "mypy>=1.13",
    "black>=24",  # oracle only — dev dep
]

[project.scripts]
pyfmt-mini = "pyfmt_mini.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfmt_mini"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/pyfmt_mini"]

[tool.coverage.report]
fail_under = 80
