[package]
name = "redis-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RESP (REdis Serialization Protocol) parser + serializer (cs01)"

[dependencies]
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
