[package]
name = "redis-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Axum HTTP + RESP TCP listener (cs01)"

[lib]
name = "redis_server"
path = "src/lib.rs"

[[bin]]
name = "redis-server"
path = "src/main.rs"

[dependencies]
redis-protocol = { path = "../redis-protocol" }
redis-storage = { path = "../redis-storage" }

tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rust-embed.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tower = "0.5"

[lints]
workspace = true
