[package]
name = "redis-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-memory KV + TTL + AOF persistence (cs01)"

[dependencies]
bytes.workspace = true
futures-util.workspace = true
hashbrown.workspace = true
parking_lot = "0.12"
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
