[workspace]

[package]
name = "cs01-mini-redis-desktop"
version = "0.1.0"
description = "Tauri desktop shell for cs01 mini-redis-rust"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["ADSD in Practice contributors"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
