[package]
name = "mg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "git plumbing core: object model + index + repo discovery (cs02)"

[dependencies]
sha1.workspace = true
sha2.workspace = true
flate2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
